# KlipperCortex

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  connections.json.example  mcp_config.example.json  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
config/: klipper-cortex.service
docs/: architecture_and_flow.md  compilation.md  inference.md  mcp_integration.md  roadmap_feedback_loop.md
scripts/: build_runner.sh  compile_model.sh  deploy.py  download_models.py  install.sh  verify_model.py
src/: inference_loop.py  model_runner.cpp
